<!-- <?xml version="1.0"?> -->
<package>
  <name>cuda_code</name>
  <version>0.0.0</version>
  <description>cuda_code</description>
  <maintainer email="wjp@yx-catl.com">jpw</maintainer>
  <license>private</license>
  <author>Junpeng Wang</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <run_depend>roscpp</run_depend>

  <!-- <build_depend>pcl_conversions</build_depend>
  <run_depend>pcl_conversions</run_depend> -->
  <build_depend>pcl_ros</build_depend>
  <run_depend>pcl_ros</run_depend>

  <build_depend>std_msgs</build_depend>
  <run_depend>std_msgs</run_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>sensor_msgs</run_depend>

  <build_depend>truck_msgs</build_depend>
  <run_depend>truck_msgs</run_depend>

  <build_depend>comm_lib</build_depend>
  <run_depend>comm_lib</run_depend>

</package>
